compiler/typ/tests/fixtures/diagnostics/0079_core_apply_non_function_07.ml.infer.expected
File "0079_core_apply_non_function_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0079_core_apply_non_function_07 is not a valid module name.

File "0079_core_apply_non_function_07.ml", line 3, characters 2-5:
3 |   eta 7
      ^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
